Changed dir architecture

--- a/nextflow.config
+++ b/nextflow.config
@@ -7,7 +7,7 @@ params {
   nf_required_version = '0.27.0'
 
   help = false
-  outdir = './results'
+  outdir = './Analysis'
   //version = version
   nf_required_version = nf_required_version
   container = 'tristankast/cas_pipeline:latest'
