Deleted some defaults

--- a/conf/galaxy.config
+++ b/conf/galaxy.config
@@ -6,7 +6,11 @@
  */
 
 process {
-  $minimap{
+  $minimap_run{
+    cpus = 18
+    memory = 120.GB
+  }
+  $minimap_index{
     cpus = 18
     memory = 120.GB
   }
