Working Pipeline version

--- a/conf/base.config
+++ b/conf/base.config
@@ -15,18 +15,10 @@ process {
   // Picks up on use of -r <version> in nextflow command
   container = params.container
 
-  cpus = { check_max( 1 * task.attempt, 'cpus' ) }
-  memory = { check_max( 8.GB * task.attempt, 'memory' ) }
+  cpus = 8
+  memory = 20.GB
 
-  errorStrategy = { task.exitStatus in [143,137] ? 'retry' : 'finish' }
-  maxRetries = 1
-  maxErrors = '-1'
 
-  // Process-specific resource requirements
-  $multiqc {
-    executor = 'local'
-    errorStrategy = { task.exitStatus in [143,137] ? 'retry' : 'ignore' }
-  }
 }
 
 params {
