--- a/nextflow.config
+++ b/nextflow.config
@@ -12,6 +12,9 @@ params {
   nf_required_version = nf_required_version
   container = 'tristankast/cas_pipeline:latest'
 
+  params.reads = "*.fastq"
+  params.ref = "*.fasta"
+
   params.gstride = 80
   params.offtarget_level = 40
   params.target_proximity = 5000
@@ -19,6 +22,11 @@ params {
 }
 
 profiles {
+  standard {
+    includeConfig 'conf/base.config'
+    includeConfig 'conf/docker.config'
+  }
+
   galaxy {
     includeConfig 'conf/base.config'
     includeConfig 'conf/docker.config'
