Updated README and profiles

--- a/nextflow.config
+++ b/nextflow.config
@@ -32,6 +32,10 @@ profiles {
     includeConfig 'conf/docker.config'
     includeConfig 'conf/galaxy.config'
   }
+  
+  inDocker {
+    includeConfig 'conf/base.config'
+  }
 }
 
 // Capture exit codes from upstream processes when piping
